--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -1,17 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calchylus - Lambda calculus in Hy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000002190AA6DB70>"
+       "<function <lambda> at 0x00000263475349D8>"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,9 +42,9 @@
     "        (except [ValueError] (setv y (len l))))\n",
     "      (cut l 0 y)))\n",
     "\n",
-    "  (defn hcdot [expr] \n",
-    "    (list \n",
-    "      (map (fn [x] (if (= x hy.HyCons) comma x)) expr)))\n",
+    "  ;(defn hcdot [expr] \n",
+    "  ;  (list \n",
+    "  ;    (map (fn [x] (if (= x hy.HyCons) comma x)) expr)))\n",
     " \n",
     "  (defn args [expr]\n",
     "    (if (= (first expr) comma) [] (take-until comma expr))))\n",
@@ -45,20 +52,77 @@
     "(defmacro 𝜆 [&rest expr]\n",
     "  `(fn [~@(args expr)] ~(first (drop-until comma expr))))\n",
     "\n",
-    "(defsharp L [expr]\n",
-    "  (do\n",
-    "    (print (first expr))\n",
-    "    (setv expr (hcdot expr))\n",
-    "    (print\n",
-    "      expr\n",
-    "      (drop-until comma `~expr) \n",
-    "      (take-until comma `~expr))\n",
-    "    `(fn ~(first expr) ~(second expr))))\n",
+    ";(defsharp L [expr]\n",
+    ";  (do\n",
+    ";    (print (first expr))\n",
+    ";    (setv expr (hcdot expr))\n",
+    ";    (print\n",
+    ";      expr\n",
+    ";      (drop-until comma `~expr) \n",
+    ";      (take-until comma `~expr))\n",
+    ";    `(fn ~(first expr) ~(second expr))))\n",
     "\n",
     "; Ÿ Application\n",
-    "(defmacro Ÿ [func &rest args] (print `(apply ~func ~args)))\n",
+    ";(defmacro Ÿ [func &rest args] (print `(apply ~func ~args)))\n",
     "; 𝜆 lambda function / expression / abstraction\n",
-    "(defmacro λ [&rest expr] (print expr))"
+    ";(defmacro λ [&rest expr] (print expr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "; Terms: [𝜆 x .]\n",
+    "; Abstraction: (𝜆 x . x) -> creates a definition of (fn [x] x) which is the identity function that is supposed to return the same value as passed\n",
+    "; Application: ((𝜆 x . x) 1) -> calls for identity function with a value 1, so the output / value of this application is 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lambda abstraction\n",
+    "$(𝜆 \\space x · x)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fn' ['x'] 'x')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(macroexpand '(𝜆 x · x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lambda application\n",
+    "\n",
+    "$((𝜆 \\space x · x)\\space y)$"
    ]
   },
   {
@@ -72,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,19 +145,111 @@
        "1"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; ((𝜆 x \\. x) 1) -> 1\n",
     "((𝜆 x · x) 1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function as an argument"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((𝜆 x · x) (𝜆 x · x)) 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Self application\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((𝜆 x · (x x)) (𝜆 x · x)) 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply function\n",
+    "\n",
+    "Further abstracting functional properties of the lambda expressions, we can imitate implement (apply func args) with the next statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((𝜆 func · (𝜆 arg · (func arg))) (𝜆 x · x)) 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ";λfunc.λarg.(func arg)\n",
+    ";((𝜆 x · (* x ((𝜆 x · x) 2))) 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,92 +258,13 @@
        "4"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((𝜆 x · (* x 2)) 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((𝜆 x · (* x ((𝜆 x · x) 2))) 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('fn' ['x'] ('*' 'x' 'y'))"
-      ]
-     },
-     "execution_count": 245,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(macroexpand '(𝜆 x · (* x y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('fn' ['x'] ('𝜆' 'y' '·' ('*' 'y' 'x')))"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(macroexpand '(𝜆 x · (𝜆 y · (* y x))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    ";((λfirst.λsecond.first x) y)\n",
     "(((𝜆 x · (𝜆 y · (* y x))) 2) 2)"
    ]
   },
@@ -202,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +288,7 @@
        "2"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +308,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +367,7 @@
        "2"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +398,7 @@
        "3"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,59 +406,6 @@
    "source": [
     "((𝜆 x y · (+ x y)) 1 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('x' ',' 'x')\n",
-      "['x', ',', 'x'] ['x', ',', 'x'] ['x', ',', 'x']\n"
-     ]
-    }
-   ],
-   "source": [
-    ";(λ x '. x)\n",
-    "\n",
-    ";(Ÿ (fn [x] x) 'a)\n",
-    "\n",
-    "#L (x , x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "; Abstraction: 𝜆x.x -> creates a definition of (fn [x] x) which is the identity function, returns same value as passed\n",
-    "; Application: (𝜆x.x 1) -> calls for identity function with a value 1, so the output / value of this application is 1\n",
-    "; 𝜆x.y -> constant, what ever value x is, y is returned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
