--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000263475349D8>"
+       "<function <lambda> at 0x000001D6E35F6400>"
       ]
      },
      "execution_count": 1,
@@ -24,6 +24,7 @@
     }
    ],
    "source": [
+    "; for lambda macro these functions needs to be available at compile time\n",
     "(eval-and-compile\n",
     " \n",
     "  (setv comma '·)\n",
@@ -83,7 +84,8 @@
    },
    "outputs": [],
    "source": [
-    "; Terms: [𝜆 x .]\n",
+    "; Syntax: [𝜆 . ( )]\n",
+    "; Variable names: [x y z ...]\n",
     "; Abstraction: (𝜆 x . x) -> creates a definition of (fn [x] x) which is the identity function that is supposed to return the same value as passed\n",
     "; Application: ((𝜆 x . x) 1) -> calls for identity function with a value 1, so the output / value of this application is 1"
    ]
@@ -131,7 +133,7 @@
    "source": [
     "#### Identity function\n",
     "\n",
-    "Function returns same value that is passed as an argument:"
+    "Function returns same value that is passed as an argument. Let's run the simple application of the identity function:"
    ]
   },
   {
@@ -158,7 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Function as an argument"
+    "#### Function as an argument\n",
+    "\n",
+    "Argument passed to the function can also be yet another function. Say, we want to pass the identity function to the identity function instead of static value, then appication would look this:\n",
+    "\n",
+    "$$((𝜆 \\space x · x) \\space (𝜆 \\space x · x))$$\n",
+    "\n",
+    "The outcome of such application is a function, thus it alone cannot evaluate to any value. Rather we need to treat it as a function part of the application and provide input for it:"
    ]
   },
   {
@@ -185,7 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Self application\n"
+    "#### Self application\n",
+    "\n",
+    "One more step toward deeper nested structures is to use argument as a function and input at the same time:"
    ]
   },
   {
@@ -212,9 +222,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Apply function\n",
+    "#### Currying\n",
     "\n",
-    "Further abstracting functional properties of the lambda expressions, we can imitate implement (apply func args) with the next statement:"
+    "Restriction of the traditional Lambda Calculus is that it allows one and only one argument per function. However, there is a way to imitate multiple argument passing with a nested structure called *currying*."
    ]
   },
   {
@@ -225,40 +235,10 @@
     {
      "data": {
       "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(((𝜆 func · (𝜆 arg · (func arg))) (𝜆 x · x)) 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ";λfunc.λarg.(func arg)\n",
-    ";((𝜆 x · (* x ((𝜆 x · x) 2))) 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,14 +252,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Constants\n",
+    "#### Apply function\n",
     "\n",
-    "Whatever is the argument, return 1:"
+    "Further abstracting functional properties of the lambda expressions, we can implement function caller (apply func args) with the next statement:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +268,36 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((𝜆 func · (𝜆 arg · (func arg))) (𝜆 x · x)) 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Constants\n",
+    "\n",
+    "Whatever is the argument, return 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +317,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +376,7 @@
        "2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -398,13 +407,141 @@
        "3"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "((𝜆 x y · (+ x y)) 1 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Booleans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; TRUE\n",
+    "(((𝜆 x · (𝜆 y · x)) 1) 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; FALSE\n",
+    "(((𝜆 x · (𝜆 y · y)) 1) 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x000001D6E36CFC80>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; AND\n",
+    "(𝜆 x · (𝜆 y · ((x y) F)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x000001D6E36CFD08>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; OR\n",
+    "(𝜆 x · (𝜆 y · ((x T) y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x000001D6E36CFB70>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; NOT\n",
+    "(𝜆 x · ((x F) T))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The [MIT](http://choosealicense.com/licenses/mit/) License\n",
+    "\n",
+    "Copyright (c) 2017 Marko Manninen"
    ]
   }
  ],
