--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calchylus - Lambda calculus in Hy"
+    "# Calchylus - Lambda calculus in Hy\n",
+    "<br/>\n",
+    "<img src=\"lambda.png\" height=150 width=150 />\n",
+    "<br/>\n",
+    "[Lambda calculus](https://en.wikipedia.org/wiki/Lambda_calculus) is a formal system in mathematical logic for expressing computation based on function abstraction and application using variable binding and substitution.\n",
+    "\n",
+    "Calchylus is a [Hy](http://docs.hylang.org) macro to write and evaluate Lambda expressions.\n",
+    "\n",
+    "### Lambda macro"
    ]
   },
   {
@@ -15,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001D6E35F6400>"
+       "<function _hy_anon_fn_5 at 0x000001EC67503AE8>"
       ]
      },
      "execution_count": 1,
@@ -43,9 +51,9 @@
     "        (except [ValueError] (setv y (len l))))\n",
     "      (cut l 0 y)))\n",
     "\n",
-    "  ;(defn hcdot [expr] \n",
-    "  ;  (list \n",
-    "  ;    (map (fn [x] (if (= x hy.HyCons) comma x)) expr)))\n",
+    "  (defn hcdot [expr] \n",
+    "    (list \n",
+    "      (map (fn [x] (if (= x hy.HyCons) comma x)) expr)))\n",
     " \n",
     "  (defn args [expr]\n",
     "    (if (= (first expr) comma) [] (take-until comma expr))))\n",
@@ -53,41 +61,28 @@
     "(defmacro 𝜆 [&rest expr]\n",
     "  `(fn [~@(args expr)] ~(first (drop-until comma expr))))\n",
     "\n",
-    ";(defsharp L [expr]\n",
-    ";  (do\n",
-    ";    (print (first expr))\n",
-    ";    (setv expr (hcdot expr))\n",
-    ";    (print\n",
-    ";      expr\n",
-    ";      (drop-until comma `~expr) \n",
-    ";      (take-until comma `~expr))\n",
-    ";    `(fn ~(first expr) ~(second expr))))\n",
+    "; shorthand syntax: (#λ(x y · (+ x y)) 1 2)\n",
+    "(defsharp λ [expr] (print expr)\n",
+    "  `(fn [~@(args expr)] ~(first (drop-until comma expr))))\n",
     "\n",
-    "; Ÿ Application\n",
-    ";(defmacro Ÿ [func &rest args] (print `(apply ~func ~args)))\n",
-    "; 𝜆 lambda function / expression / abstraction\n",
-    ";(defmacro λ [&rest expr] (print expr))"
+    "; Ÿ Application"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Terms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "; Syntax: [𝜆 . ( )]\n",
-    "; Variable names: [x y z ...]\n",
-    "; Abstraction: (𝜆 x . x) -> creates a definition of (fn [x] x) which is the identity function that is supposed to return the same value as passed\n",
-    "; Application: ((𝜆 x . x) 1) -> calls for identity function with a value 1, so the output / value of this application is 1"
+    "#### Syntax\n",
+    "\n",
+    "[`𝜆` `·` `(` `)`]\n",
+    "\n",
+    "#### Terms\n",
+    "\n",
+    "1. Lambda variables, any literal following Hy symbol definitions are accepted, for example: `x` ,`y`, `args`, `FUNCTION` but also any unicode name like `⨐` is ok\n",
+    "\n",
+    "2. Lambda abstraction, for example `(𝜆 x · x)` creates a definition of function `(fn [x] x)`\n",
+    "\n",
+    "3. Lambda application , for example `((𝜆 x · x) 1)` calls for identity function with the input value 1, so the output / value of this application is 1"
    ]
   },
   {
@@ -95,12 +90,12 @@
    "metadata": {},
    "source": [
     "#### Lambda abstraction\n",
-    "$(𝜆 \\space x · x)$"
+    "$$\\Large(𝜆 \\space x · x)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +104,7 @@
        "('fn' ['x'] 'x')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +119,7 @@
    "source": [
     "#### Lambda application\n",
     "\n",
-    "$((𝜆 \\space x · x)\\space y)$"
+    "$$\\Large((𝜆 \\space x · x)\\space y)$$"
    ]
   },
   {
@@ -134,6 +129,39 @@
     "#### Identity function\n",
     "\n",
     "Function returns same value that is passed as an argument. Let's run the simple application of the identity function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((𝜆 x · x) 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function as an argument\n",
+    "\n",
+    "Argument passed to the function can also be yet another function. Say, we want to pass the identity function to the identity function instead of static value, then appication would look this:\n",
+    "\n",
+    "$$\\Large((𝜆 \\space x · x) \\space (𝜆 \\space x · x))$$\n",
+    "\n",
+    "The outcome of such application is a function, thus it alone cannot evaluate to any value. Rather we need to treat it as a function part of the application and provide input for it:"
    ]
   },
   {
@@ -153,20 +181,16 @@
     }
    ],
    "source": [
-    "((𝜆 x · x) 1)"
+    "(((𝜆 x · x) (𝜆 x · x)) 1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Function as an argument\n",
+    "#### Self application\n",
     "\n",
-    "Argument passed to the function can also be yet another function. Say, we want to pass the identity function to the identity function instead of static value, then appication would look this:\n",
-    "\n",
-    "$$((𝜆 \\space x · x) \\space (𝜆 \\space x · x))$$\n",
-    "\n",
-    "The outcome of such application is a function, thus it alone cannot evaluate to any value. Rather we need to treat it as a function part of the application and provide input for it:"
+    "One more step toward deeper nested structures is to use argument as a function and input at the same time:"
    ]
   },
   {
@@ -186,35 +210,6 @@
     }
    ],
    "source": [
-    "(((𝜆 x · x) (𝜆 x · x)) 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Self application\n",
-    "\n",
-    "One more step toward deeper nested structures is to use argument as a function and input at the same time:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "(((𝜆 x · (x x)) (𝜆 x · x)) 1)"
    ]
   },
@@ -229,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +233,7 @@
        "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +263,7 @@
        "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +292,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,13 +312,106 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(, ((𝜆 x · x) 1) ((𝜆 x · x) 2) ((𝜆 x · x) 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Make pair\n",
+    "\n",
+    "$$\\Large(𝜆 \\space x · (𝜆 \\space y · (𝜆 \\space f · ((f \\space x) \\space y))))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((((𝜆 x · (𝜆 y · (𝜆 f · ((f x) y)))) 1) 2) (𝜆 x · (𝜆 y · x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select second:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((((𝜆 x · (𝜆 y · (𝜆 f · ((f x) y)))) 1) 2) (𝜆 x · (𝜆 y · y)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Twiddle\n",
+    "\n",
+    "Swap function argument pair."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; ask for the second but because arguments are swapped, the first one is returned\n",
+    "((((𝜆 x · (𝜆 y · (𝜆 f · ((f y) x)))) 1) 2) (𝜆 x · (𝜆 y · y)))"
    ]
   },
   {
@@ -337,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -360,6 +448,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Free and bound variables\n",
+    "\n",
+    "Lambda abstractions can hold any free variables, but at the application evaluation, none of the functions should have free variables or it will cause variable definition error. For example, this is ok since we are declaring the function, not executing it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x000001EC675E3730>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(𝜆 x · (+ x y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But onbound variable y will become a problem on evaluation of the application:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'y' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "(try \n",
+    "  ((𝜆 x · (+ x y)) 1)\n",
+    "  (except (e NameError)\n",
+    "    (print \"'y' is not defined\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### No arguments?!\n",
     "\n",
     "In original Lambda Calculus functions must have one and only one argument. Lambda macro in Calchylus is not that restricted. We can omit argument for simplicity:"
@@ -367,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +520,7 @@
        "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +551,7 @@
        "3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,19 +578,19 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; TRUE\n",
+    "; TRUE = select first\n",
     "(((𝜆 x · (𝜆 y · x)) 1) 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -455,13 +599,13 @@
        "2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; FALSE\n",
+    "; FALSE = select second\n",
     "(((𝜆 x · (𝜆 y · y)) 1) 2)"
    ]
   },
@@ -474,16 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001D6E36CFC80>"
+       "<function <lambda> at 0x000001EC675E3730>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,16 +639,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001D6E36CFD08>"
+       "<function <lambda> at 0x000001EC675E36A8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,16 +660,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001D6E36CFB70>"
+       "<function <lambda> at 0x000001EC675E3950>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,6 +677,44 @@
    "source": [
     "; NOT\n",
     "(𝜆 x · ((x F) T))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Triangular number\n",
+    "\n",
+    "Summation..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "; loop until given limit and sum up all values -> (summa 10) -> 55"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "; loop until given limit and sum up all values -> (product 7) -> 5040"
    ]
   },
   {
