--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -78,11 +78,11 @@
     "\n",
     "#### Terms\n",
     "\n",
-    "1. Lambda variables, any literal following Hy symbol definitions are accepted, for example: `x` ,`y`, `args`, `FUNCTION` but also any unicode name like `⨐` is ok\n",
+    "1. Lambda variables, any literal following Hy symbol definitions are accepted, for example: `x` ,`y`, `args`, `FUNC` but also any unicode name like `⨐` is ok\n",
     "\n",
     "2. Lambda abstraction, for example `(𝜆 x · x)` creates a definition of function `(fn [x] x)`\n",
     "\n",
-    "3. Lambda application , for example `((𝜆 x · x) 1)` calls for identity function with the input value 1, so the output / value of this application is 1"
+    "3. Lambda application , for example `((𝜆 x · x) 1)` calls for identity function with the input value 1"
    ]
   },
   {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -627,56 +627,56 @@
        "<function <lambda> at 0x000001EC675E3730>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "; AND\n",
-    "(𝜆 x · (𝜆 y · ((x y) F)))"
+    "(𝜆 x · (𝜆 y · ((x y) False)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E36A8>"
+       "<function <lambda> at 0x000001EC675E3840>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "; OR\n",
-    "(𝜆 x · (𝜆 y · ((x T) y)))"
+    "(𝜆 x · (𝜆 y · ((x True) y)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E3950>"
+       "<function <lambda> at 0x000001EC675E37B8>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "; NOT\n",
-    "(𝜆 x · ((x F) T))"
+    "(𝜆 x · ((x False) True))"
    ]
   },
   {
@@ -690,13 +690,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "; loop until given limit and sum up all values -> (summa 10) -> 55"
+    "; loop until given limit and sum up all values -> (summa 10) -> 55\n",
+    "(try\n",
+    " ; we will catch recursion error from this line, otherwise output would be messier\n",
+    " (print ((𝜆 x y z · (if (> y 0) (x x (dec y) (+ y z)) z)) (𝜆 x y z · (if (> y 0) (x x (dec y) (+ y z)) z)) 10 0))\n",
+    " (except (e RecursionError)\n",
+    "   (print \"Eternal loop achieved!\")))"
    ]
   },
   {
@@ -708,13 +719,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
-    "; loop until given limit and sum up all values -> (product 7) -> 5040"
+    "; loop until given limit and sum up all values -> (product 7) -> 5040\n",
+    "(try\n",
+    " ; we will catch recursion error from this line, otherwise output would be messier\n",
+    " (print ((𝜆 x y z · (if (> y 0) (x x (dec y) (* y z)) z)) (𝜆 x y z · (if (> y 0) (x x (dec y) (* y z)) z)) 7 1))\n",
+    " (except (e RecursionError)\n",
+    "   (print \"Eternal loop achieved!\")))"
    ]
   },
   {
