simplify summation and product examples

--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "<function _hy_anon_fn_5 at 0x000001EC67503AE8>"
+       "<function _hy_anon_fn_5 at 0x000001F47D0550D0>"
       ]
      },
      "execution_count": 1,
@@ -461,7 +461,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E3730>"
+       "<function <lambda> at 0x000001F47D12FEA0>"
       ]
      },
      "execution_count": 14,
@@ -618,16 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E3730>"
+       "<function <lambda> at 0x000001F47D12FEA0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,16 +639,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E3840>"
+       "<function <lambda> at 0x000001F47D12FE18>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,16 +660,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001EC675E37B8>"
+       "<function <lambda> at 0x000001F47D146048>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,24 +690,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55\n"
-     ]
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "; loop until given limit and sum up all values -> (summa 10) -> 55\n",
-    "(try\n",
-    " ; we will catch recursion error from this line, otherwise output would be messier\n",
-    " (print ((𝜆 x y z · (if (> y 0) (x x (dec y) (+ y z)) z)) (𝜆 x y z · (if (> y 0) (x x (dec y) (+ y z)) z)) 10 0))\n",
-    " (except (e RecursionError)\n",
-    "   (print \"Eternal loop achieved!\")))"
+    "; loop until given limit and sum up all values -> (summa 10)\n",
+    "; x = function, y = steps, z = result\n",
+    "((𝜆 x y · (x x y 0))\n",
+    "  (𝜆 x y z · (if (> y 0) (x x (- y 1) (+ y z)) z))\n",
+    "  10)"
    ]
   },
   {
@@ -719,24 +721,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5040\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5040"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "; loop until given limit and sum up all values -> (product 7) -> 5040\n",
-    "(try\n",
-    " ; we will catch recursion error from this line, otherwise output would be messier\n",
-    " (print ((𝜆 x y z · (if (> y 0) (x x (dec y) (* y z)) z)) (𝜆 x y z · (if (> y 0) (x x (dec y) (* y z)) z)) 7 1))\n",
-    " (except (e RecursionError)\n",
-    "   (print \"Eternal loop achieved!\")))"
+    "; loop until given limit and sum up all values -> (product 7)\n",
+    "; x = function, y = steps, z = result\n",
+    "((𝜆 x y · (x x y 1)) (𝜆 x y z · (if (> y 0) (x x (- y 1) (* y z)) z)) 7)"
    ]
   },
   {
